# drugra

./: Cargo.toml  README.md  shell.nix
assets/: releases-query.graphql  repo-query.graphql  schema.public.graphql
src/: github_stats.rs  gui.rs  main.rs
src/druid_ext/: controllers.rs  mod.rs
src/repo/: fetcher.rs  mod.rs
